--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -6,13 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "MongoDbSettings" : {
-      "Host" : "cluster0.2si5o.mongodb.net",
-      "User": "simon",
-     "Password": "Fifakungen1337"
-  },
   "JwtConfig":{
     "Secret": "jzRTvVLIL73UlENbGHYegajLMNtF0lwh"  
-  }
+  },
+  "AllowedHosts": "*"
 }
