--- a/Tutorial.Api/kubernetes/catalog.yaml
+++ b/Tutorial.Api/kubernetes/catalog.yaml
@@ -25,10 +25,7 @@ spec:
           - name: MongoDbSettings__Host
             value: mongodb-service
           - name: MongoDbSettings__Password
-            valueFrom:
-              secretKeyRef:
-                name: tutorial-secrets
-                key: mongodb-password
+            value: pass
         livenessProbe:
           httpGet:
             path: /health/live
