--- a/Tutorial.Api/kubernetes/mongodb.yaml
+++ b/Tutorial.Api/kubernetes/mongodb.yaml
@@ -25,10 +25,7 @@ spec:
           - name: MONGO_INITDB_ROOT_USERNAME
             value: mongoadmin
           - name: MONGO_INITDB_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: tutorial-secrets
-                key: mongodb-password
+            value: pass
         volumeMounts:
           - mountPath: /data/db 
             name: data
