--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,21 @@
 version: 2.1
 
 jobs:
+  build-and-test-angular-main:
+        docker:
+          - image: circleci/node:15-browsers
+        steps:
+            - checkout
+            - run:
+                name: install angular
+                command: cd webserver/mainserver && install @angular/cli
+            - run:
+                name: install webserver dependencies
+                command: cd webserver/mainserver && npm install
+            - run:
+                name: compile angular project
+                command: cd webserver/mainserver && npm run build
+
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:  
     # These next lines define a Docker executor: https://circleci.com/docs/2.0/executor-types/
