--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ jobs:
             - checkout
             - run:
                 name: install angular
-                command: cd webserver/mainserver && install @angular/cli
+                command: cd webservers/mainserver && install @angular/cli
             - run:
                 name: install webserver dependencies
-                command: cd webserver/mainserver && npm install
+                command: cd webservers/mainserver && npm install
             - run:
                 name: compile angular project
-                command: cd webserver/mainserver && npm run build
+                command: cd webservers/mainserver && npm run build
 
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:  
