--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,26 @@ jobs:
             - checkout
             - run:
                 name: install angular
-                command: cd webservers/mainserver && npm install @angular/cli
+                command: cd frontend/angularMain && npm install @angular/cli
             - run:
                 name: install webserver dependencies
-                command: cd webservers/mainserver && npm install
+                command: cd frontend/angularMain && npm install
             - run:
                 name: compile angular project
-                command: cd webservers/mainserver && npm run build
+                command: cd frontend/angularMain && npm run build
+            - run:
+                name: install heroku
+                command: sudo curl https://cli-assets.heroku.com/install.sh | sh
+            - run:
+                name: login to heroku
+                command: HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
+            - run:
+                name: Build and push webserver container
+                command: cd webservers/mainserver && HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a main-web-server web
+            - run:
+                name: Release container on heroku
+                command: HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a main-web-server web
+
 
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:  
