--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - checkout
             - run:
                 name: install npm
-                command: npm install npm
+                command: sudo apt install npm
             - run:
                 name: update sudo
                 command: sudo apt update
