--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,16 @@ jobs:
                 name: update sudo
                 command: sudo apt update
             - run:
+                name: install node version manager
+                command: npm install -g n
+            - run:
                 name: install node
                 command: sudo n latest
             - run:
                 name: install angular
                 command: npm install angular-cli@latest -g
             - run:
-                name: install webserver dependencies
+                name: install frontend dependencies
                 command: cd frontend/angularMain && npm install
             - run:
                 name: compile angular project
