--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ orbs:
 jobs:
   build-and-test-angular-main :
         docker:
-        - image: circleci/16.8.0
+        - image: 16.8.0-browsers
         steps:
             - checkout
             - run: 
