--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ orbs:
   # Orbs reduce the amount of configuration required for common tasks. 
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
   heroku: circleci/heroku@1.2.6
-
+  node: circleci/node@4.7
 jobs:
   build-and-test-angular-main:
         machine: true
