--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,40 +2,28 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. 
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-orbs:
-  # The Node.js orb contains a set of prepackaged CircleCI configuration you can utilize
-  # Orbs reduce the amount of configuration required for common tasks. 
-  # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/node
-  heroku: circleci/heroku@1.2.6
-  node: circleci/node@4.7
+
 jobs:
   build-and-test-angular-main:
-        machine: true
+        docker:
+          - image: circleci/node:15-browsers
         steps:
             - checkout
-            - node/install
-            - run: node --version
-            - run: 
+            - run:
                 name: install angular
                 command: cd frontend/angularMain && npm install @angular/cli
             - run:
-                name: install frontend dependencies
+                name: install webserver dependencies
                 command: cd frontend/angularMain && npm install
             - run:
                 name: compile angular project
                 command: cd frontend/angularMain && npm run build
             - run:
-                name: install heroku
-                command: sudo curl https://cli-assets.heroku.com/install.sh | sh
-            - run:
-                name: login to heroku
-                command: HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
-            - run:
-                name: Build and push webserver container
-                command: cd webservers/mainserver && HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a main-web-server web
-            - run:
-                name: Release container on heroku
-                command: HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a main-web-server web
+            - command:
+                sudo curl https://cli-assets.heroku.com/install.sh | sh
+                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
+                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 web
+                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 web
 
 
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
