--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,12 @@ jobs:
                 name: compile angular project
                 command: cd frontend/angularMain && npm run build
             - run:
-            - command:
-                sudo curl https://cli-assets.heroku.com/install.sh | sh
-                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
-                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 web
-                HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 web
+                name: deploy
+                command: sudo curl https://cli-assets.heroku.com/install.sh | sh
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a python-django-starter web
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a python-django-starter web
+
 
 
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
