--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,8 @@ jobs:
                 name: deploy
                 command: sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
-                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a python-django-starter web
-                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a python-django-starter web
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 web
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 web
 
 
 
