--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
                 command: cd frontend/angularMain && npm run build
             - run:
                 name: deploy
-                command: sudo curl https://cli-assets.heroku.com/install.sh | sh
+                command: | 
+                  sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 web
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 web
