--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ version: 2.1
 jobs:
   build-and-test-angular-main:
         docker:
-          - image: circleci/node:15-browsers
+          - image: circleci/node:16.8.0
         steps:
             - checkout
             - run:
