--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           - image: circleci/node:16.8.0
         steps:
             - checkout
+            - setup_remote_docker
             - run:
                 name: install angular
                 command: cd frontend/angularMain && npm install @angular/cli
