--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
                 command: | 
                   sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
-                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 web
-                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 web
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911 --recursive
+                  HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:release -a sjo0911 --recursive
 
 
 
