--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -12,6 +12,6 @@ COPY ["webservers/mainserver/package.json", "webservers/mainserver/package-lock.
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
-COPY . .
+COPY ./webservers/mainserver .
 EXPOSE 8080
 CMD [ "node", "server.js" ]
