--- a/Gateway/.vscode/launch.json
+++ b/Gateway/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net5.0/LoginApi.dll",
+            "program": "${workspaceFolder}/bin/Debug/net5.0/Gateway.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
@@ -32,7 +32,7 @@
             "request": "launch",
             "preLaunchTask": "docker-run: debug",
             "netCore": {
-                "appProject": "${workspaceFolder}/LoginApi.csproj"
+                "appProject": "${workspaceFolder}/Gateway.csproj"
             }
         }
     ]
