--- a/Dockerfiles/webAndGateway/Dockerfile.web
+++ b/Dockerfiles/webAndGateway/Dockerfile.web
@@ -7,11 +7,11 @@ WORKDIR /
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY ["webservers/mainserver/package.json", "webservers/mainserver/package-lock.json*", "./"]
+COPY ["../../webservers/mainserver/package.json", "../../webservers/mainserver/package-lock.json*", "./"]
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --only=production
-COPY ./webservers/mainserver .
+COPY ../../webservers/mainserver .
 EXPOSE 8080
 CMD [ "node", "server.js" ]
