--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,7 @@ jobs:
             - run:
                 name: deploy
                 command: | 
-                  cd Dockerfiles
-                  cd apiOne
+                  cd LoginApi
                   sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911api --recursive
