--- a/Gateway/Dockerfile.gateway
+++ b/Gateway/Dockerfile.gateway
@@ -21,4 +21,4 @@ RUN dotnet publish "Gateway.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Gateway.dll"]
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet Gateway.dll
