--- a/GuestbookApi/Settings/appsettings.json
+++ b/GuestbookApi/Settings/appsettings.json
@@ -8,9 +8,7 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings" : {
-      "Host" : "cluster0.2si5o.mongodb.net",
-      "User": "simon",
-     "Password": "Fifakungen1337"
+    "ConnectionString": "mongodb+srv://sven:eriksson@cluster0.2si5o.mongodb.net/postsDatabase?retryWrites=true&w=majority"
   },
   "JwtConfig":{
     "Secret": "jzRTvVLIL73UlENbGHYegajLMNtF0lwh"  
