--- a/GuestbookApi/Dockerfile.web
+++ b/GuestbookApi/Dockerfile.web
@@ -2,13 +2,17 @@ FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS base
 WORKDIR /app
 EXPOSE 80
 
-ENV ASPNETCORE_URLS=http://+:80
+ENV ASPNETCORE_URLS=http://*:$PORT
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
 WORKDIR /src
-COPY ["GuestbookApi.csproj", "./"]
+COPY ["./GuestbookApi.csproj", "./"]
 RUN dotnet restore "GuestbookApi.csproj"
 COPY . .
+WORKDIR "/src/."
+RUN dotnet build "GuestbookApi.csproj" -c Release -o /app/build
+
+FROM build AS publish
 RUN dotnet publish "GuestbookApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
