--- a/GuestbookApi/Dockerfile.web
+++ b/GuestbookApi/Dockerfile.web
@@ -17,5 +17,5 @@ RUN dotnet publish "GuestbookApi.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=build /app/publish .
+COPY --from=publish /app/publish .
 CMD ASPNETCORE_URLS=http://*:$PORT dotnet GuestbookApi.dll
