--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
                 command: cd frontend/angularMain && npm run build && cd .. && cd ..
             - run:
                 name: copy javatutorial to webserver
-                command: cp -avr frontend/javagames/ webservers/mainserver/
+                command: cp -avr frontend/javagames/ webservers/mainserver/dist/
             - run:
                 name: deploy webserver
                 command: | 
