--- a/skolarbete/Dockerfile.web
+++ b/skolarbete/Dockerfile.web
@@ -3,4 +3,4 @@ COPY /EShopJsf/target/eshopjsf.war /opt/jboss/wildfly/standalone/deployments/
 COPY /EShop/target/EShop.war /opt/jboss/wildfly/standalone/deployments/
 EXPOSE 8080
 
-CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0", "-Djboss.http.port=$PORT"]
+CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-Djboss.http.port=$PORT", "-b", "0.0.0.0"]
