--- a/skolarbete/Dockerfile.web
+++ b/skolarbete/Dockerfile.web
@@ -1,4 +1,4 @@
-FROM jboss/wildfly
+FROM jboss/wildfly:20.0.1.Final
 COPY /EShopJsf/target/eshopjsf.war /opt/jboss/wildfly/standalone/deployments/
 COPY /EShop/target/EShop.war /opt/jboss/wildfly/standalone/deployments/
 EXPOSE 8080
