--- a/skolarbete/EShop/pom.xml
+++ b/skolarbete/EShop/pom.xml
@@ -37,6 +37,16 @@
 		<artifactId>gson</artifactId>     
 		<version>2.8.6</version>     
 	</dependency>
+	<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.5</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.rabbitmq</groupId>
+	    <artifactId>amqp-client</artifactId>
+	    <version>5.10.0</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>EShop</finalName>
