--- a/skolarbete/EShopJsf/pom.xml
+++ b/skolarbete/EShopJsf/pom.xml
@@ -32,11 +32,21 @@
        <version>8.0</version>
        <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.5</version>
+	</dependency>
 	<dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
     <version>2.12.4</version>
 </dependency>
+	<dependency>
+	    <groupId>com.rabbitmq</groupId>
+	    <artifactId>amqp-client</artifactId>
+	    <version>5.10.0</version>
+	</dependency>
   </dependencies>
 
     <build>
