--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             - run:
                 name: deploy
                 command: | 
-                  cd LoginApi
+                  cd api/LoginApi
                   sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911api --recursive
@@ -48,7 +48,7 @@ jobs:
             - run:
                 name: deploy gateway
                 command: | 
-                  cd Gateway
+                  cd api/Gateway
                   sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911gateway --recursive
@@ -56,7 +56,7 @@ jobs:
             - run:
                 name: deploy guestbookApi
                 command: | 
-                  cd GuestbookApi
+                  cd api/GuestbookApi
                   sudo curl https://cli-assets.heroku.com/install.sh | sh
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:login
                   HEROKU_API_KEY=${HEROKU_TOKEN} heroku container:push -a sjo0911guestbookapi --recursive
